time_app/deploy/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-deployment
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  type: LoadBalancer
