time_app/deploy/exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-exporter-service
  labels:
    app: app-exporter
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: app-exporter
